# Meng-Elli

./: .gitignore  CMakeLists.txt
src/: EllipseConstraint.h  EllipseNonMaximumSuppression.h  FLED.cpp  FLED.h  FLED_PrivateFunctions.cpp  FLED_drawAndWriteFunctions.cpp  Group.cpp  LinkMatrix.h  Node_FC.h  adaptApproxPolyDP.cpp  adaptApproximateContours.cpp  adaptApproximateContours.h  definition.h  main.cpp
